--- a/assets/css/pages/index/partials/style.css
+++ b/assets/css/pages/index/partials/style.css
@@ -502,14 +502,18 @@ section.como-ser .centro .passos-guia .passo p {
 }
 
 section.como-ser .centro .passos-guia .passo .box-icon {
-  background-color: #f3f4f6;
+  background-color: #ec258e;
   padding: 12px 36px;
-  border: 1px solid rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0 0 10px #ae1667;
   border-radius: 12px;
   font-size: 20px;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+section.como-ser .centro .passos-guia .passo .box-icon i{
+  color: #fff;
 }
 
 section.como-ser .centro .btn {
@@ -521,7 +525,6 @@ section.como-ser .centro span.elementFlex {
   margin-bottom: 4em;
   font-size: 14px;
 }
-
 /**/
 
 /*Seção 7*/
@@ -541,7 +544,7 @@ section.quem-e div.centro {
 
 .container-historia {
   width: 50%;
-  padding: 5em 3em 5em 0;
+  padding: 5em 3em 4em 0;
   z-index: 1;
   position: relative;
 }
@@ -586,12 +589,6 @@ section.quem-e span.elementFlex {
   color: #e3e3e3;
 }
 
-.container {
-  background-color: #1a1a1a;
-  padding: 20px;
-  position: relative;
-}
-
 .counter-wrapper {
   display: flex;
   justify-content: center;
@@ -599,7 +596,7 @@ section.quem-e span.elementFlex {
   max-width: 1200px;
   margin: 0 auto;
   padding: 40px;
-  background: rgba(255, 255, 255, 0.05);
+  background: rgba(0, 0, 0, 0.2);
   border-radius: 20px;
   backdrop-filter: blur(10px);
 }
@@ -618,7 +615,7 @@ section.quem-e span.elementFlex {
 .count {
   font-size: 4rem;
   font-weight: 700;
-  color: #ec258e;
+  color: #f3f4f6;
   margin-bottom: 10px;
   text-shadow: 0 0 10px rgba(236, 37, 142, 0.5);
 }
@@ -629,7 +626,6 @@ section.quem-e span.elementFlex {
   opacity: 0.9;
   line-height: 1.4;
 }
-
 /**/
 
 /*Seção 8*/
