--- a/assets/css/pages/index/partials/style.css
+++ b/assets/css/pages/index/partials/style.css
@@ -2,12 +2,17 @@
 body {
   font-family: var(--font);
   overflow-x: hidden;
+  font-display: swap;
+  text-rendering: optimizeLegibility;
 }
 
 div.centro {
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 2%;
+  contain: layout style;
+  content-visibility: auto;
+  contain-intrinsic-size: 1000px;
 }
 
 .elementFlex {
@@ -17,6 +22,7 @@ div.centro {
   align-items: center;
   flex-direction: row;
   flex-wrap: wrap;
+  contain: layout style;
 }
 
 span.pinkcolor {
@@ -61,11 +67,14 @@ header .logo img {
   z-index: 0;
   position: absolute;
   z-index: 1;
+  contain: layout style;
 }
 
 section.home .container-home {
   display: flex;
   flex-direction: row;
+  contain: layout style;
+  min-height: 300px;
 }
 
 .container-video {
@@ -74,7 +83,7 @@ section.home .container-home {
   flex-direction: column;
 }
 
-.container-video .video-box{
+.container-video .video-box {
   width: 100%;
   max-width: 100%;
   align-self: center;
@@ -83,14 +92,17 @@ section.home .container-home {
 
 .container-video .video-box .video-iframe {
   position: relative;
+  width: 100%;
   height: 0;
   line-height: 0;
   padding-bottom: 56.25%;
   box-sizing: border-box;
   /* 16:9 Aspect Ratio */
+  aspect-ratio: 16 / 9;
+  contain: layout style;
 }
 
-.container-video .video-box .video-iframe iframe{
+.container-video .video-box .video-iframe iframe {
   position: absolute;
   top: 0;
   left: 0;
@@ -116,6 +128,7 @@ section.home .container-home {
   width: 100%;
   transition: all 0.5s;
   cursor: pointer;
+  contain: layout style;
 }
 
 .btn span {
@@ -289,7 +302,7 @@ section.depoimentos .centro h1 {
   flex-direction: column;
 }
 
-.container-cases .case .video-container{
+.container-cases .case .video-container {
   width: 800px;
   max-width: 100%;
   align-self: center;
@@ -303,6 +316,8 @@ section.depoimentos .centro h1 {
   padding-bottom: 56.25%;
   box-sizing: border-box;
   /* 16:9 Aspect Ratio */
+  aspect-ratio: 16 / 9;
+  contain: layout style;
 }
 
 .container-cases .case .video-container .video-iframe iframe {
@@ -513,7 +528,7 @@ section.como-ser .centro .passos-guia .passo .box-icon {
   justify-content: center;
 }
 
-section.como-ser .centro .passos-guia .passo .box-icon i{
+section.como-ser .centro .passos-guia .passo .box-icon i {
   color: #fff;
 }
 
@@ -526,6 +541,7 @@ section.como-ser .centro span.elementFlex {
   margin-bottom: 4em;
   font-size: 14px;
 }
+
 /**/
 
 /*Seção 7*/
@@ -600,6 +616,7 @@ section.quem-e span.elementFlex {
   background: rgba(0, 0, 0, 0.2);
   border-radius: 20px;
   backdrop-filter: blur(10px);
+  contain: layout style;
 }
 
 .counter {
@@ -627,6 +644,7 @@ section.quem-e span.elementFlex {
   opacity: 0.9;
   line-height: 1.4;
 }
+
 /**/
 
 /*Seção 8*/
@@ -722,6 +740,8 @@ section.produtos .box-colecao .slider {
   overflow: hidden;
   border-bottom-right-radius: 32px;
   border-bottom-left-radius: 32px;
+  contain: layout style;
+  content-visibility: auto;
 }
 
 section.produtos .box-colecao .slider .slides {
@@ -738,10 +758,16 @@ section.produtos .box-colecao .slider .slides .slide {
   width: 25%;
   position: relative;
   transition: all 2s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 section.produtos .box-colecao .slider .slides .slide img {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center 30%;
 }
 
 section.produtos .box-colecao .slider .manual-navigation {
@@ -926,6 +952,11 @@ section.faq .titulo-perguntas h1.whitecolor {
 .container-faq input#abrir-question-4:checked~.active-4>i,
 .container-faq input#abrir-question-5:checked~.active-5>i {
   transform: rotate(90deg);
+}
+
+.faq.answer {
+  contain: content;
+  content-visibility: auto;
 }
 
 .container-faq input#abrir-question-1,
