--- a/assets/css/pages/form/partials/styleforms.css
+++ b/assets/css/pages/form/partials/styleforms.css
@@ -106,7 +106,7 @@ div.centro {
 .form .info-form .field .control .btn {
   width: 75%;
   padding: 8px;
-  background: #ec258e;
+  background: #f80084;
   color: white;
   border: none;
   border-radius: 36px;
