--- a/assets/css/pages/index/partials/style.css
+++ b/assets/css/pages/index/partials/style.css
@@ -90,25 +90,11 @@ section.home .container-home {
   margin-bottom: 2em;
 }
 
-.container-video .video-box .video-iframe {
-  position: relative;
+.meu-video {
   width: 100%;
-  height: 0;
-  line-height: 0;
-  padding-bottom: 56.25%;
-  box-sizing: border-box;
-  /* 16:9 Aspect Ratio */
   aspect-ratio: 16 / 9;
-  contain: layout style;
-}
-
-.container-video .video-box .video-iframe iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border: none;
+  border-radius: 8px;
+  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
 }
 
 /*Estilização Botão*/
