--- a/assets/css/pages/index/partials/style.css
+++ b/assets/css/pages/index/partials/style.css
@@ -92,6 +92,7 @@ section.home .container-home {
 
 .meu-video {
   width: 100%;
+  height: 100%;
   aspect-ratio: 16 / 9;
   border-radius: 8px;
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
@@ -283,8 +284,8 @@ section.depoimentos .centro h1 {
 }
 
 .container-cases .case {
-  flex: 1;
   min-width: 300px;
+  flex: 1;
   flex-direction: column;
 }
 
@@ -293,26 +294,7 @@ section.depoimentos .centro h1 {
   max-width: 100%;
   align-self: center;
   margin-bottom: 2em;
-}
-
-.container-cases .case .video-container .video-iframe {
-  position: relative;
-  height: 0;
-  line-height: 0;
-  padding-bottom: 56.25%;
-  box-sizing: border-box;
-  /* 16:9 Aspect Ratio */
-  aspect-ratio: 16 / 9;
-  contain: layout style;
-}
-
-.container-cases .case .video-container .video-iframe iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border: none;
+  overflow: hidden;
 }
 
 .container-cases .case h1 {
