--- a/assets/css/pages/form/partials/styleforms.css
+++ b/assets/css/pages/form/partials/styleforms.css
@@ -28,7 +28,7 @@ div.centro {
 
 .form {
   overflow: hidden;
-  background: url(../../../../images/fundofachada.png);
+  background: url(../../../../images/fundofachada.webp);
   background-position: bottom;
   background-size: cover;
   background-repeat: no-repeat;
